data/intermediate/generated/parser/HTML/HTMLParser.py
# Generated from /Users/annaellebaiget/Desktop/MS_Thesis/ExplainFuzz/data/intermediate/grammars/final/HTML/HTMLParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HTMLParser ( Parser ):

    grammarFileName = "HTMLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<'", "<INVALID>", "'>'", 
                     "'/>'", "'/'", "'='" ]

    symbolicNames = [ "<INVALID>", "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", 
                      "XML", "CDATA", "DTD", "SCRIPTLET", "SEA_WS", "SCRIPT_OPEN", 
                      "STYLE_OPEN", "TAG_OPEN", "HTML_TEXT", "TAG_CLOSE", 
                      "TAG_SLASH_CLOSE", "TAG_SLASH", "TAG_EQUALS", "TAG_NAME", 
                      "TAG_WHITESPACE", "SCRIPT_BODY", "SCRIPT_SHORT_BODY", 
                      "STYLE_BODY", "STYLE_SHORT_BODY", "ATTVALUE_VALUE", 
                      "ATTRIBUTE" ]

    RULE_htmlDocument = 0
    RULE_htmlelements_star = 1
    RULE_dtd_question = 2
    RULE_xml_question = 3
    RULE_scriptletorseaws_star = 4
    RULE_scriptletOrSeaWs = 5
    RULE_htmlElements = 6
    RULE_htmlmisc_star = 7
    RULE_block_7 = 8
    RULE_block_0 = 9
    RULE_block_7_question = 10
    RULE_htmlElement = 11
    RULE_htmlattribute_star = 12
    RULE_block_8 = 13
    RULE_block_2 = 14
    RULE_htmlContent = 15
    RULE_block_2_star = 16
    RULE_block_4 = 17
    RULE_htmlAttribute = 18
    RULE_block_4_question = 19
    RULE_htmlChardata = 20
    RULE_htmlMisc = 21
    RULE_htmlComment = 22
    RULE_block_5 = 23
    RULE_script = 24
    RULE_block_6 = 25
    RULE_style = 26
    RULE_htmlchardata_question = 27

    ruleNames =  [ "htmlDocument", "htmlelements_star", "dtd_question", 
                   "xml_question", "scriptletorseaws_star", "scriptletOrSeaWs", 
                   "htmlElements", "htmlmisc_star", "block_7", "block_0", 
                   "block_7_question", "htmlElement", "htmlattribute_star", 
                   "block_8", "block_2", "htmlContent", "block_2_star", 
                   "block_4", "htmlAttribute", "block_4_question", "htmlChardata", 
                   "htmlMisc", "htmlComment", "block_5", "script", "block_6", 
                   "style", "htmlchardata_question" ]

    EOF = Token.EOF
    HTML_COMMENT=1
    HTML_CONDITIONAL_COMMENT=2
    XML=3
    CDATA=4
    DTD=5
    SCRIPTLET=6
    SEA_WS=7
    SCRIPT_OPEN=8
    STYLE_OPEN=9
    TAG_OPEN=10
    HTML_TEXT=11
    TAG_CLOSE=12
    TAG_SLASH_CLOSE=13
    TAG_SLASH=14
    TAG_EQUALS=15
    TAG_NAME=16
    TAG_WHITESPACE=17
    SCRIPT_BODY=18
    SCRIPT_SHORT_BODY=19
    STYLE_BODY=20
    STYLE_SHORT_BODY=21
    ATTVALUE_VALUE=22
    ATTRIBUTE=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class HtmlDocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scriptletorseaws_star(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.Scriptletorseaws_starContext)
            else:
                return self.getTypedRuleContext(HTMLParser.Scriptletorseaws_starContext,i)


        def xml_question(self):
            return self.getTypedRuleContext(HTMLParser.Xml_questionContext,0)


        def dtd_question(self):
            return self.getTypedRuleContext(HTMLParser.Dtd_questionContext,0)


        def htmlelements_star(self):
            return self.getTypedRuleContext(HTMLParser.Htmlelements_starContext,0)


        def EOF(self):
            return self.getToken(HTMLParser.EOF, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_htmlDocument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlDocument" ):
                listener.enterHtmlDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlDocument" ):
                listener.exitHtmlDocument(self)




    def htmlDocument(self):

        localctx = HTMLParser.HtmlDocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_htmlDocument)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.scriptletorseaws_star()
                self.state = 57
                self.xml_question()
                self.state = 58
                self.scriptletorseaws_star()
                self.state = 59
                self.dtd_question()
                self.state = 60
                self.scriptletorseaws_star()
                self.state = 61
                self.htmlelements_star()
                self.state = 62
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.scriptletorseaws_star()
                self.state = 65
                self.xml_question()
                self.state = 66
                self.scriptletorseaws_star()
                self.state = 67
                self.dtd_question()
                self.state = 68
                self.scriptletorseaws_star()
                self.state = 69
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.xml_question()
                self.state = 72
                self.dtd_question()
                self.state = 73
                self.scriptletorseaws_star()
                self.state = 74
                self.htmlelements_star()
                self.state = 75
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.scriptletorseaws_star()
                self.state = 78
                self.xml_question()
                self.state = 79
                self.dtd_question()
                self.state = 80
                self.htmlelements_star()
                self.state = 81
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.xml_question()
                self.state = 84
                self.dtd_question()
                self.state = 85
                self.htmlelements_star()
                self.state = 86
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.scriptletorseaws_star()
                self.state = 89
                self.xml_question()
                self.state = 90
                self.dtd_question()
                self.state = 91
                self.scriptletorseaws_star()
                self.state = 92
                self.htmlelements_star()
                self.state = 93
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 95
                self.xml_question()
                self.state = 96
                self.dtd_question()
                self.state = 97
                self.scriptletorseaws_star()
                self.state = 98
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 100
                self.scriptletorseaws_star()
                self.state = 101
                self.xml_question()
                self.state = 102
                self.dtd_question()
                self.state = 103
                self.scriptletorseaws_star()
                self.state = 104
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 106
                self.xml_question()
                self.state = 107
                self.dtd_question()
                self.state = 108
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 110
                self.xml_question()
                self.state = 111
                self.scriptletorseaws_star()
                self.state = 112
                self.dtd_question()
                self.state = 113
                self.htmlelements_star()
                self.state = 114
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 116
                self.scriptletorseaws_star()
                self.state = 117
                self.xml_question()
                self.state = 118
                self.scriptletorseaws_star()
                self.state = 119
                self.dtd_question()
                self.state = 120
                self.htmlelements_star()
                self.state = 121
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 123
                self.xml_question()
                self.state = 124
                self.scriptletorseaws_star()
                self.state = 125
                self.dtd_question()
                self.state = 126
                self.scriptletorseaws_star()
                self.state = 127
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 129
                self.scriptletorseaws_star()
                self.state = 130
                self.xml_question()
                self.state = 131
                self.scriptletorseaws_star()
                self.state = 132
                self.dtd_question()
                self.state = 133
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 135
                self.xml_question()
                self.state = 136
                self.scriptletorseaws_star()
                self.state = 137
                self.dtd_question()
                self.state = 138
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 140
                self.xml_question()
                self.state = 141
                self.scriptletorseaws_star()
                self.state = 142
                self.dtd_question()
                self.state = 143
                self.scriptletorseaws_star()
                self.state = 144
                self.htmlelements_star()
                self.state = 145
                self.match(HTMLParser.EOF)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 147
                self.scriptletorseaws_star()
                self.state = 148
                self.xml_question()
                self.state = 149
                self.dtd_question()
                self.state = 150
                self.match(HTMLParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Htmlelements_starContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlElements(self):
            return self.getTypedRuleContext(HTMLParser.HtmlElementsContext,0)


        def htmlelements_star(self):
            return self.getTypedRuleContext(HTMLParser.Htmlelements_starContext,0)


        def htmlmisc_star(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.Htmlmisc_starContext)
            else:
                return self.getTypedRuleContext(HTMLParser.Htmlmisc_starContext,i)


        def htmlElement(self):
            return self.getTypedRuleContext(HTMLParser.HtmlElementContext,0)


        def TAG_OPEN(self):
            return self.getToken(HTMLParser.TAG_OPEN, 0)

        def TAG_NAME(self):
            return self.getToken(HTMLParser.TAG_NAME, 0)

        def htmlattribute_star(self):
            return self.getTypedRuleContext(HTMLParser.Htmlattribute_starContext,0)


        def block_0(self):
            return self.getTypedRuleContext(HTMLParser.Block_0Context,0)


        def SCRIPTLET(self):
            return self.getToken(HTMLParser.SCRIPTLET, 0)

        def SCRIPT_OPEN(self):
            return self.getToken(HTMLParser.SCRIPT_OPEN, 0)

        def block_5(self):
            return self.getTypedRuleContext(HTMLParser.Block_5Context,0)


        def STYLE_OPEN(self):
            return self.getToken(HTMLParser.STYLE_OPEN, 0)

        def block_6(self):
            return self.getTypedRuleContext(HTMLParser.Block_6Context,0)


        def getRuleIndex(self):
            return HTMLParser.RULE_htmlelements_star

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlelements_star" ):
                listener.enterHtmlelements_star(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlelements_star" ):
                listener.exitHtmlelements_star(self)




    def htmlelements_star(self):

        localctx = HTMLParser.Htmlelements_starContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_htmlelements_star)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.htmlElements()
                self.state = 155
                self.htmlelements_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.htmlmisc_star()
                self.state = 158
                self.htmlElement()
                self.state = 159
                self.htmlmisc_star()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.htmlmisc_star()
                self.state = 162
                self.htmlElement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.htmlElement()
                self.state = 165
                self.htmlmisc_star()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 167
                self.match(HTMLParser.TAG_OPEN)
                self.state = 168
                self.match(HTMLParser.TAG_NAME)
                self.state = 169
                self.htmlattribute_star()
                self.state = 170
                self.block_0()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 172
                self.match(HTMLParser.SCRIPTLET)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 173
                self.match(HTMLParser.SCRIPT_OPEN)
                self.state = 174
                self.block_5()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 175
                self.match(HTMLParser.STYLE_OPEN)
                self.state = 176
                self.block_6()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 177
                self.match(HTMLParser.TAG_OPEN)
                self.state = 178
                self.match(HTMLParser.TAG_NAME)
                self.state = 179
                self.block_0()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dtd_questionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DTD(self):
            return self.getToken(HTMLParser.DTD, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_dtd_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDtd_question" ):
                listener.enterDtd_question(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDtd_question" ):
                listener.exitDtd_question(self)




    def dtd_question(self):

        localctx = HTMLParser.Dtd_questionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dtd_question)
        try:
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.match(HTMLParser.DTD)
                pass
            elif token in [-1, 1, 2, 6, 7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Xml_questionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def XML(self):
            return self.getToken(HTMLParser.XML, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_xml_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXml_question" ):
                listener.enterXml_question(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXml_question" ):
                listener.exitXml_question(self)




    def xml_question(self):

        localctx = HTMLParser.Xml_questionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_xml_question)
        try:
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.match(HTMLParser.XML)
                pass
            elif token in [-1, 1, 2, 5, 6, 7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scriptletorseaws_starContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scriptletOrSeaWs(self):
            return self.getTypedRuleContext(HTMLParser.ScriptletOrSeaWsContext,0)


        def scriptletorseaws_star(self):
            return self.getTypedRuleContext(HTMLParser.Scriptletorseaws_starContext,0)


        def SCRIPTLET(self):
            return self.getToken(HTMLParser.SCRIPTLET, 0)

        def SEA_WS(self):
            return self.getToken(HTMLParser.SEA_WS, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_scriptletorseaws_star

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScriptletorseaws_star" ):
                listener.enterScriptletorseaws_star(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScriptletorseaws_star" ):
                listener.exitScriptletorseaws_star(self)




    def scriptletorseaws_star(self):

        localctx = HTMLParser.Scriptletorseaws_starContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_scriptletorseaws_star)
        try:
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.scriptletOrSeaWs()
                self.state = 191
                self.scriptletorseaws_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 193
                self.match(HTMLParser.SCRIPTLET)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 194
                self.match(HTMLParser.SEA_WS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScriptletOrSeaWsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCRIPTLET(self):
            return self.getToken(HTMLParser.SCRIPTLET, 0)

        def SEA_WS(self):
            return self.getToken(HTMLParser.SEA_WS, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_scriptletOrSeaWs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScriptletOrSeaWs" ):
                listener.enterScriptletOrSeaWs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScriptletOrSeaWs" ):
                listener.exitScriptletOrSeaWs(self)




    def scriptletOrSeaWs(self):

        localctx = HTMLParser.ScriptletOrSeaWsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_scriptletOrSeaWs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlElementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlmisc_star(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.Htmlmisc_starContext)
            else:
                return self.getTypedRuleContext(HTMLParser.Htmlmisc_starContext,i)


        def htmlElement(self):
            return self.getTypedRuleContext(HTMLParser.HtmlElementContext,0)


        def TAG_OPEN(self):
            return self.getToken(HTMLParser.TAG_OPEN, 0)

        def TAG_NAME(self):
            return self.getToken(HTMLParser.TAG_NAME, 0)

        def htmlattribute_star(self):
            return self.getTypedRuleContext(HTMLParser.Htmlattribute_starContext,0)


        def block_0(self):
            return self.getTypedRuleContext(HTMLParser.Block_0Context,0)


        def SCRIPTLET(self):
            return self.getToken(HTMLParser.SCRIPTLET, 0)

        def SCRIPT_OPEN(self):
            return self.getToken(HTMLParser.SCRIPT_OPEN, 0)

        def block_5(self):
            return self.getTypedRuleContext(HTMLParser.Block_5Context,0)


        def STYLE_OPEN(self):
            return self.getToken(HTMLParser.STYLE_OPEN, 0)

        def block_6(self):
            return self.getTypedRuleContext(HTMLParser.Block_6Context,0)


        def getRuleIndex(self):
            return HTMLParser.RULE_htmlElements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlElements" ):
                listener.enterHtmlElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlElements" ):
                listener.exitHtmlElements(self)




    def htmlElements(self):

        localctx = HTMLParser.HtmlElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_htmlElements)
        try:
            self.state = 222
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 199
                self.htmlmisc_star()
                self.state = 200
                self.htmlElement()
                self.state = 201
                self.htmlmisc_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 203
                self.htmlmisc_star()
                self.state = 204
                self.htmlElement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 206
                self.htmlElement()
                self.state = 207
                self.htmlmisc_star()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 209
                self.match(HTMLParser.TAG_OPEN)
                self.state = 210
                self.match(HTMLParser.TAG_NAME)
                self.state = 211
                self.htmlattribute_star()
                self.state = 212
                self.block_0()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 214
                self.match(HTMLParser.SCRIPTLET)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 215
                self.match(HTMLParser.SCRIPT_OPEN)
                self.state = 216
                self.block_5()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 217
                self.match(HTMLParser.STYLE_OPEN)
                self.state = 218
                self.block_6()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 219
                self.match(HTMLParser.TAG_OPEN)
                self.state = 220
                self.match(HTMLParser.TAG_NAME)
                self.state = 221
                self.block_0()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Htmlmisc_starContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlMisc(self):
            return self.getTypedRuleContext(HTMLParser.HtmlMiscContext,0)


        def htmlmisc_star(self):
            return self.getTypedRuleContext(HTMLParser.Htmlmisc_starContext,0)


        def SEA_WS(self):
            return self.getToken(HTMLParser.SEA_WS, 0)

        def HTML_COMMENT(self):
            return self.getToken(HTMLParser.HTML_COMMENT, 0)

        def HTML_CONDITIONAL_COMMENT(self):
            return self.getToken(HTMLParser.HTML_CONDITIONAL_COMMENT, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_htmlmisc_star

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlmisc_star" ):
                listener.enterHtmlmisc_star(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlmisc_star" ):
                listener.exitHtmlmisc_star(self)




    def htmlmisc_star(self):

        localctx = HTMLParser.Htmlmisc_starContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_htmlmisc_star)
        try:
            self.state = 230
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 224
                self.htmlMisc()
                self.state = 225
                self.htmlmisc_star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 227
                self.match(HTMLParser.SEA_WS)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 228
                self.match(HTMLParser.HTML_COMMENT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 229
                self.match(HTMLParser.HTML_CONDITIONAL_COMMENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_7Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlContent(self):
            return self.getTypedRuleContext(HTMLParser.HtmlContentContext,0)


        def TAG_OPEN(self):
            return self.getToken(HTMLParser.TAG_OPEN, 0)
